--- a/404.html
+++ b/404.html
@@ -72,7 +72,7 @@
     </style>
     <script type="text/javascript">
       function back(){
-        window.location.href = 'https://collapseless.github.io';
+        window.location.href = window.location.origin;
       }
     </script>
     <h3>Why the page not found?<br>
