--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function a(){
-        window.location.href='https://collapseless.github.io/';
+        window.location.href=window.location.origin;
       }
       function b(){
         window.location.href='dnh.html';
@@ -20,7 +20,7 @@
         window.location.href="join/";
       }
       function cuu(){
-        window.location.href="https://collapseless.github.io";
+        window.location.href=window.location.origin;
       }
       function che(){
         window.location.href="n";
@@ -42,7 +42,7 @@
       window.location.href="join/";
     }
     function cuu(){
-      window.location.href="https://collapseless.github.io";
+      window.location.href=window.location.origin;
     }
     function che(){
       window.location.href="n";
