--- a/join/index.html
+++ b/join/index.html
@@ -9,7 +9,7 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function as() {
-        window.location.href='https://collapseless.github.io/';
+        window.location.href=window.location.origin;
       }
       function wab() {
         window.location.href='oot';
@@ -31,13 +31,13 @@
     }
 
     function cuu(){
-      window.location.href="https://collapseless.github.io/help";
+      window.location.href=window.location.origin+"help";
     }
     function check(){
-      window.location.href="https://collapseless.github.io";
+      window.location.href=window.location.origin;
     }
     function che(){
-      window.location.href="https://collapseless.github.io/n";
+      window.location.href=window.location.origin+"n";
     }
     </script>
     <style media="screen">
