--- a/join/oot.html
+++ b/join/oot.html
@@ -14,7 +14,7 @@
         window.location.href='wwab';
       }
       function f(){
-        window.location.href='https://collapseless.github.io/';
+        window.location.href=window.location.origin;
       }
     </script>
     <style>
@@ -39,7 +39,7 @@
       If you've read the tips above and still want to join, you can now select them.<br>
         <input type="button" name="next" value="Be copartner" onclick="xaa1()"><br><br>
       <input type="button" name="next" value="Be staff member" onclick="xaa2()"><br><br>
-      
+
       Otherwise, click the exit button below.<br></p>
       <input type="button" name="" value="EXIT" onclick="f()">
     </h3></font>
