--- a/join/wab.html
+++ b/join/wab.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
     var rbt = 0;
     function a() {
-      window.location.href='https://collapseless.github.io/';
+      window.location.href=window.location.origin;
     }
     function xaa() {
       if(document.getElementById('one').value!=''){
