--- a/join/xxay.html
+++ b/join/xxay.html
@@ -30,7 +30,7 @@
         setTimeout("window.location.href='thanks';", 1000 )
       }
       function quit(){
-        window.location.href = 'https://collapseless.github.io/join';
+        window.location.href = window.location.origin+'join';
       }
     </script>
     <style>
