--- a/n.html
+++ b/n.html
@@ -22,7 +22,7 @@
       window.location.href="join/";
     }
     function che(){
-      window.location.href="https://collapseless.github.io";
+      window.location.href=window.location.origin;
     }
     function cuu(){
       window.location.href="help";
