--- a/join/join.html
+++ b/join/join.html
@@ -8,7 +8,7 @@
   <body style="background-color: #000000"><font color='white'>
     <script type="text/javascript">
       function as() {
-        window.location.href='https://collapseless.github.io/';
+        window.location.href=window.location.origin;
       }
       function wab() {
         window.location.href='oot.html';
