--- a/join/thanks.html
+++ b/join/thanks.html
@@ -18,7 +18,7 @@
     </style>
     <script type="text/javascript">
       function a() {
-        window.location.href='https://collapseless.github.io/';
+        window.location.href=window.location.origin;
       }
     </script><font color='white'>
     <div class="">
