--- a/join/index.html
+++ b/join/index.html
@@ -31,13 +31,13 @@
     }
 
     function cuu(){
-      window.location.href=window.location.origin+"help";
+      window.location.href=window.location.origin+"/help";
     }
     function check(){
       window.location.href=window.location.origin;
     }
     function che(){
-      window.location.href=window.location.origin+"n";
+      window.location.href=window.location.origin+"/n";
     }
     </script>
     <style media="screen">
