--- a/join/xay.html
+++ b/join/xay.html
@@ -32,7 +32,7 @@
         window.location.href = 'pxay.html?email='+email+"&why="+why+"&country="+country;
       }
       function quit(){
-        window.location.href = window.location.origin+'join';
+        window.location.href = window.location.origin+'/join';
       }
     </script>
     <style>
