--- a/testyourcpu.html
+++ b/testyourcpu.html
@@ -48,6 +48,21 @@ b<html lang="en">
     <canvas id="c1" width="1024" height="1024">
         <span>canvas?</span>
     </canvas>
+    <canvas id="c1" width="1024" height="1024">
+        <span>canvas?</span>
+    </canvas>
+    <canvas id="c1" width="1024" height="1024">
+        <span>canvas?</span>
+    </canvas>
+    <canvas id="c1" width="1024" height="1024">
+        <span>canvas?</span>
+    </canvas>
+    <canvas id="c1" width="1024" height="1024">
+        <span>canvas?</span>
+    </canvas>
+    <canvas id="c1" width="1024" height="1024">
+        <span>canvas?</span>
+    </canvas>
 </div>
     </button id="btn">CONFIG</button>
     <div id="config">
